; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_oid.c_git_oid_allocfmt.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_oid.c_git_oid_allocfmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OID_HEXSZ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @git_oid_allocfmt(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i64, i64* @GIT_OID_HEXSZ, align 8
  %6 = add nsw i64 %5, 1
  %7 = call i8* @git__malloc(i64 %6)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %18

11:                                               ; preds = %1
  %12 = load i8*, i8** %4, align 8
  %13 = load i64, i64* @GIT_OID_HEXSZ, align 8
  %14 = add nsw i64 %13, 1
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @git_oid_nfmt(i8* %12, i64 %14, i32* %15)
  %17 = load i8*, i8** %4, align 8
  store i8* %17, i8** %2, align 8
  br label %18

18:                                               ; preds = %11, %10
  %19 = load i8*, i8** %2, align 8
  ret i8* %19
}

declare dso_local i8* @git__malloc(i64) #1

declare dso_local i32 @git_oid_nfmt(i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
